# routes/index.js
@@ -1,13 +1,16 @@
 const routes = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
+const bodyParser = require('body-parser');
+
+routes.use(bodyParser.json());
 
 
-routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
+routes.get('/api-docs');
 routes.get('/', (req, res) =>{
     res.send('Josh Dart')
 });
-routes.use('/api-docs', swaggerUi.serve);
+routes.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 routes.use('/contacts', require('./contacts'));
 
 module.exports = routes;
